// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Forms/FormLabel Dev 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <label
      aria-required={true}
      className="fd-form-label fd-form-label--required"
    >
      Default
    </label>
    <div
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <input
            className="fd-input"
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormLabel Disabled 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <label
      className="fd-form-label is-disabled"
    >
      Disabled Label
    </label>
    <div
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <input
            className="fd-input"
            disabled={true}
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormLabel Primary 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <label
      className="fd-form-label"
    >
      Default Label
    </label>
    <div
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <input
            className="fd-input"
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormLabel Required 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <label
      aria-required={true}
      className="fd-form-label fd-form-label--required"
    >
      Required Label
    </label>
    <div
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <input
            className="fd-input"
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
